--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "axios": "^1.3.4",
     "body-parser": "^1.20.1",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "helmet": "^6.1.5",
     "jquery": "^3.6.3",
     "mongoose": "^6.9.0",
     "toastify-js": "^1.12.0"
